--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="psyho_book_list">МОРАЛЬ</string>
     <string name="back">Назад</string>
     <string name="Chat">Чат</string>
+    <string name="input">Input</string>
+    <string name="todo">TODO</string>
 </resources>
